--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "build": "node_modules/.bin/tsc"
+  },
   "dependencies": {
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.5"
   }
 }
